# engine

./: .atom-build.json  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.in.txt  CMakeLists.txt  CODINGSTYLE.md  CODINGSTYLE.org  COPYING  Doxyfile  Doxyfile.in  EclipseFormater.xml  README  README.html  README.md  README.org  TODO  TODO.html  TODO.md  TODO.org  checkFormat.sh  clean.sh  defines.in.hpp  gen_sources.sh  generate.bat  generate.cfg  generate.sh  iContext_window.cpp  libs.txt  oglTest.json  setupWindows.bat  test.json  travisRun.sh  vars.txt
cmake/: FindGMP.cmake  FindVulkan.cmake  Findassimp.cmake  addLib.cmake  addTest.cmake  compiler.cmake  compilerTests.cmake  createSPIRV.cmake  engine_dependences.cmake  enum2string.cmake  findSources.cmake  genEngineHpp.cmake  genFormatCommand.cmake  genLogMacros.cmake  git.cmake  gnerateDebugDefines.cmake  platforms.cmake  selectSources.cmake
cmake/clang/: clang-format_3_6.yaml  clang-format_4_0.yaml
cmake/templates/: CMakeLists.lib.in  CMakeLists.test.in  Doxyfile.in  FindEngine.cmake.in  cmake_uninstall.cmake.in  defines.in.hpp  engine.in.hpp  spirv.in.cpp  spirv.in.hpp  uMacros.in.hpp
cmake/tests/: wregex.cpp
dependencies/: CMakeLists.txt  generate.sh  o3dgc
doc/: mainpage.dox
engine/: eCMDColor.cpp  eEventInfo.hpp  eInit.cpp  eMouse.hpp
engine/basicClasses/: eDisplayBasic.hpp
engine/windows/: eContext.cpp  eContext.hpp  eDisplays.cpp  eDisplays.hpp  eInit_event.cpp
engine/x11/: eContext_window.cpp  eKeyboard.cpp
etc/: build.sh  rsa_max  rsa_max.cpp
generate/: CMakeLists.txt.dep  CMakeLists.txt.flags  CMakeLists.txt.git  CMakeLists.txt.post  CMakeLists.txt.pre  clang-format_3_5.yaml  clang-format_3_6.yaml  clang-format_3_7.yaml
generate/cmake/: .find.cmake.kate-swp  FindEngine.cmake  FindEngine.cmake.in  FindGLEW2.cmake  cmake_uninstall.cmake.in  compiler.cmake  compiler.cmakez20083.new  displayServer.cmake  find.cmake  git.cmake  newLib.cmake  testSources.cmake
generate/functions/: addTarget.sh  build.sh  buildConfig.sh  clangAndReformat.sh  cleanAndCount.sh  compilerTests.sh  debugDefines.sh  dependencies.sh  engineHPP.sh  findSources.sh  generateDefinesHPP.sh  glew.sh  installTools.sh  log.sh  logMacros.sh  operatingSystem.sh  parseCFG.sh  rootCMake.sh  tests.sh
gitHooks/: pre-commit
init/: eInit.hpp  iEventInfo.hpp  iInit.cpp  iInit.hpp  iInit_vkInit.cpp  iMouse.cpp  iMouse.hpp
init/basicClasses/: eInitEventBasic.hpp  iDisplayBasic.cpp  iDisplayBasic.hpp  iInitEventBasic.cpp  iInitEventBasic.hpp  iInitSignals.cpp  iInitSignals.hpp  iKeyboardBasic.cpp  iKeyboardBasic.hpp  iRandRBasic.cpp  iRandRBasic.hpp  iWindowBasic.cpp  iWindowBasic.hpp
init/windows/: eContext_window.cpp  eKeyboard.cpp  eKeyboard.hpp  eRandR.cpp  eRandR.hpp  iContext.cpp  iContext.hpp  iContext_window.cpp  iDisplayRandR.cpp  iDisplayRandR.hpp  iDisplays.cpp  iDisplays.hpp  iInit_event.cpp  iKeyboard.cpp  iKeyboard.hpp  iRandR.cpp  iRandR.hpp
init/x11/: eContext.cpp  eContext.hpp  eInit_event.cpp  eKeyboard.hpp  iContext.cpp  iContext.hpp  iContext_window.cpp  iInit_event.cpp  iKeyboard.cpp  iKeyboard.hpp  iWindow.cpp  iWindow.hpp  iWindow_Keyboard.cpp
loader/: lOBJ_3D_f.cpp  lOBJ_3D_f.hpp
loader/base/: lLoaderBase.hpp  lLoaderStructs.hpp
loader/glTF/: lGLTF.cpp  lGLTF.hpp  lGLTF_helper.cpp  lGLTF_interprete.cpp  lGLTF_macroHelpers.hpp  lGLTF_map.cpp  lGLTF_map.hpp  lGLTF_structs.cpp  lGLTF_structs.hpp
render/: rBuffer.cpp  rBuffer.hpp  rMaterial.cpp  rMaterial.hpp  rNormalObject.cpp  rNormalObject.hpp  rPipeline.cpp  rPipeline.hpp  rRenderLoop.cpp  rRenderLoop.hpp  rRenderer.cpp  rRenderer.hpp  rRenderer_vkInit.cpp  rRoot.cpp  rRoot.hpp  rRoot_structs.hpp  rRoot_vkInit.cpp  rScene.cpp  rScene.hpp  rTexture.cpp  rTexture.hpp  rWorld.cpp  rWorld.hpp  rWorld_structs.hpp  rWorld_vkInit.cpp
render/loader/: rLoaderBase.hpp  rLoader_3D_f_OBJ.cpp  rLoader_3D_f_OBJ.hpp
render/math/: rMatrix.hpp  rMatrixMath.hpp  rMatrixObjectBase.hpp  rMatrixSceneBase.hpp  rMatrixWorldBase.hpp  rVectorMath.hpp
render/objects/: rAmbientLight.hpp  rObjectBase.cpp  (+5 more)
src/: color.cpp  color.hpp  defines.in.hpp  displays_basic.cpp  displays_basic.hpp  eDisplayBasic.cpp  eDisplayBasic.hpp  eInit.cpp  eInit.hpp  eKeyboardBasic.cpp  eMouse.cpp  eMouse.hpp  eSystem.cpp  eSystem.hpp  eWindowData.cpp  eWindowData.hpp  init.cpp  init.hpp  keyboard_basic.cpp  keyboard_basic.hpp  platform.hpp  signal_slot.cpp  signal_slot.hpp  system.cpp  system.hpp  window_data.cpp  window_data.hpp
test/: CMakeLists.txt
tests/: README  testOrder.txt
tests/test1/: .gitignore  CMakeLists.txt  CMakeScript.cmake  cmdANDinit.cpp  cmdANDinit.hpp  config.in.hpp  generate.pre.sh  handler.cpp  handler.hpp  main.cpp  myScene.cpp  myScene.hpp  myWorld.cpp  myWorld.hpp
tests/test1/data/: CMakeLists.txt  mesh.blend  mesh.dae  mesh.mtl  test.json
tests/test1/data/blendfiles/: fractal.blend  golf-ball.blend  golf-ball.blend1  mesh.blend  suzanne.blend  text.blend  town.blend  town.blend1
tests/test1/data/glTF/: mesh.dae  mesh0FS.glsl
tests/test1/data/shaders/: colors_p.frag  colors_p.vert  deferred1.frag  deferred1.vert  deferred2.frag  deferred2.vert  normals.frag  normals.geom  normals.vert  phong.frag  phong.vert  sADS.frag  sADS.vert  shaderBasic.frag  shaderBasic.vert  triangle1.frag  triangle1.vert  vert.spv
tests/test1/shaders/: .dummy
tools/: objAutoFaceShift.sh  objConvertToTriangle.awk  objFaceShift.awk  objMove.awk  objParse.awk  objParsePrint.awk  objScale.awk  objScaleXYZ.awk
utils/: uConfig.cpp  uConfig.hpp  uExtensions.cpp  uExtensions.hpp  uRandomISAAC.cpp  uRandomISAAC.hpp  uSignalSlot.cpp  uSignalSlot.hpp  uSystem.cpp  uSystem.hpp
vulkanUtils/: vkuBuffer.cpp  vkuBuffer.hpp  vkuCommandBuffer.cpp  vkuCommandBuffer.hpp  vkuCommandPool.cpp  vkuCommandPool.hpp  vkuCommandPoolManager.cpp  vkuCommandPoolManager.hpp  vkuDevice.cpp  vkuDevice.hpp  vkuFence.hpp  vkuFrameBuffer.cpp  vkuFrameBuffer.hpp  vkuImageBuffer.cpp  vkuImageBuffer.hpp  vkuRenderPass.cpp  vkuRenderPass.hpp  vkuSemaphore.hpp  vkuSwapChain.cpp  vkuSwapChain.hpp
(+234 files in other folders)
